Fix alignment issues on the logo and footer

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -4,7 +4,7 @@
     position: relative;
     top: $baseline-unit*2;
     padding: $baseline-unit*5 0;
-    margin: 0 0 0 $baseline-unit;
+    margin: 0 0 0 1.66667%;
     @include respond-to($mq-l) {
       float: left;
       position: absolute;
